fix: white space for tutorials sections fix

--- a/src/pages/tutorials/tutorials.scss
+++ b/src/pages/tutorials/tutorials.scss
@@ -484,7 +484,7 @@
 
         @supports (-webkit-touch-callout: none) {
             @include mobile-or-tablet-screen {
-                height: calc(100vh - 28rem);
+                height: calc(100vh - 32rem);
             }
         }
     }
